--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "echo \"NPM_TOKEN value: $NPM_TOKEN\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
